api-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-deployment
  labels:
    app: demo-react-mongo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: go-api-pod
      app: demo-react-mongo-app
  template:
    metadata:
      name: go-api-pod
      labels:
        name: go-api-pod
        app: demo-react-mongo-app
    spec:
      containers:
      - name: go-api-pod
        image: ghcr.io/saketh-macharla/assignment-api:latest
        ports:
        - containerPort: 8080
