api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
      name: go-api-pod
      labels:
        name: go-api-pod
        app: demo-react-mongo-app
spec:
  containers:
  - name: go-api-pod
    image: ghcr.io/saketh-macharla/assignment-api:latest
    ports:
    - containerPort: 8080
