db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    tier: database-statefulset
spec:
  replicas: 3
  selector:
    matchLabels:
      type: db
      tier: database
  serviceName: mongo
  template:
    metadata:
      name: mongodb
      labels:
        type: db
        tier: database
    spec:
      containers:
        - name: mongodb
          image: ghcr.io/saketh-macharla/assignment-mongo:latest
          ports:
            - containerPort: 27017
      # No need for this for now as the image in ghcr is public.
      # you have to use this secret if the image is private
      # imagePullSecrets: 
      #   - name: ghcr-secret
