api-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: go-api-service
  labels:
    app: demo-react-mongo-app
spec:
  ports:
    - targetPort: 8080
      port: 8080
  selector:
    name: go-api-pod
    app: demo-react-mongo-app
