db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    type: db
    tier: database
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    type: db
    tier: database
